--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,11 @@
 legacy-peer-deps=true
 engine-strict=false
-node-options=--max-old-space-size=4096 
+node-options=--max-old-space-size=3072
+loglevel=error
+prefer-offline=true
+no-optional=true
+production=false
+no-fund=true
+no-audit=true
+cache-min=3600
+progress=false 
