--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf node_modules .next",
-    "deploy-build": "npm ci --production && next build"
+    "clean": "rm -rf node_modules .next out",
+    "deploy-build": "npm ci && next build"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.2",
@@ -17,9 +20,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.0.0",
-    "next": "15.1.0",
-    "react": "^19",
-    "react-dom": "^19",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
