--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,16 @@
 [build]
-  command = "npm run deploy-build"
-  publish = ".next"
+  command = "chmod +x ./netlify-build.sh && ./netlify-build.sh"
+  publish = "out"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--no-optional --production=false --prefer-offline --no-audit"
+  NODE_VERSION = "18.18.0"
+  NPM_VERSION = "9.8.1"
   NODE_OPTIONS = "--max_old_space_size=3072"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
