--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o out",
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf node_modules .next out",
-    "deploy-build": "npm ci && next build"
+    "deploy-build": "npm ci && npm run build"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.2",
@@ -19,8 +19,9 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.20",
     "date-fns": "^3.0.0",
-    "next": "^14.0.4",
+    "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.5",
@@ -30,11 +31,11 @@
     "@react-three/drei": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^18",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
