--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
     "start": "next start",
     "lint": "next lint",
     "clean": "rm -rf node_modules .next out",
-    "deploy-build": "npm ci && npm run build"
+    "deploy-build": "npm ci && npm run build",
+    "check-deps": "npm ls"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-switch": "^1.1.2",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.0.4",
+    "@types/three": "^0.174.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.20",
     "date-fns": "^3.0.0",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.2.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "latest",
-    "@react-three/fiber": "latest",
-    "@react-three/drei": "latest"
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^18",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
